# caucus

./: .gitignore  GETTING-STARTED.md  LICENSE  README.md  WALKTHROUGH.md  pyproject.toml
benchmark/: README.md  build_report.py  report.html  run_benchmark.py
benchmark/results/: broad.json  hard.json
benchmarks/: README.md
brand/: README.md
demo/: index.html
src/caucus/: __init__.py  classifier.py  cli.py  combos.py  config.py  engine.py  frontdoor.py  keystore.py  ledger.py  log.py  providers.py  routing.py  sandbox.py  selection.py  server.py  synth.py  synth_engine.py
src/caucus/benchmarks/: bench.py  draco.py  reasoning.py  report.py  run.py
src/caucus/console/: app.css  app.js  index.html
tests/: test_bench.py  test_classifier.py  test_combos.py  test_config.py  test_draco.py  test_engine.py  test_frontdoor.py  test_keystore.py  test_providers.py  test_routing.py  test_sandbox.py  test_selection.py  test_selection_m7.py  test_server.py  test_sovereignty.py  test_synth.py  test_synth_engine.py
tests/fixtures/: turn_fixtures.json
