[project]
name = "caucus"
version = "0.1.0.dev0"
description = "A local, sovereign, turn-aware synth proxy between a coding agent and the models."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "NakliTechie" }]
keywords = ["llm", "proxy", "mixture-of-agents", "coding-agent", "sovereign", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # LiteLLM is the one external engine — multi-provider routing + the in-process Anthropic /
    # OpenAI / Responses front doors. The mixture-of-agents / best-of-N synthesis is Caucus's own
    # native engine (src/caucus/synth_engine.py), so there is no heavy ML stack to install (~186 MB).
    "litellm>=1.89.0",
    # Caucus's own daemon surface + clients.
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
caucus = "caucus.cli:main"

[project.urls]
Homepage = "https://github.com/NakliTechie/caucus"
Repository = "https://github.com/NakliTechie/caucus"
Issues = "https://github.com/NakliTechie/caucus/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caucus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
